--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,6 +13,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@reduxjs/toolkit": "^1.9.0",
@@ -30,9 +31,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.1.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@jest/globals": "^29.3.1",
     "@testing-library/jest-native": "^5.2.0",
     "@testing-library/react-native": "^11.4.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
@@ -45,7 +48,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "jest": "^29.3.1",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.1",
     "react-test-renderer": "18.1.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
