--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "rn-template",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "serve": "webpack serve",
+    "test:server": "phantomjs",
+    "build": "webpack --node-env=production --config ./expo.webpack.config.ts && babel src -d lib",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -12,15 +15,24 @@
     "test": "jest .",
     "test:watch": "jest --watch"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
+  },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^0.17.4",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@reduxjs/toolkit": "^1.9.0",
-    "expo": "^47.0.3",
+    "es6-promise": "^4.2.8",
+    "expo": "^47.0.11",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
+    "leaflet": "^1.9.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-leaflet": "^4.2.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
@@ -29,18 +41,24 @@
     "redux-saga": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@jest/globals": "^29.3.1",
     "@testing-library/jest-native": "^5.2.0",
     "@testing-library/react-native": "^11.4.0",
     "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.9",
+    "@types/leaflet": "^1.9.0",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "@webpack-cli/generators": "^3.0.1",
+    "@webpack-cli/serve": "^2.0.1",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.2",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
@@ -48,11 +66,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.10",
     "jest": "^29.3.1",
+    "jest-config": "^29.3.1",
+    "lodash": "^4.17.21",
     "prettier": "2.8.1",
     "react-test-renderer": "18.1.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "tslib": "^2.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-config": "^7.5.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "private": true
 }
